# word_similarity_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
python/: pyproject.toml  setup.py  test.py
python/word_similarity_rs/: __init__.py
src/: lib.rs
training/: TRAINING_GUIDE.md  extract_parameters.py  model.pkl  pyproject.toml  scaler.pkl  train_and_pickle.py
